Fix notification icon alignment

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -623,12 +623,12 @@ a#menu-toggle:focus {
 
 #circle {
     margin-left: -6px;
-    margin-top: -17px;
+    margin-top: -3px;
 }
 
 #circle-outline {
     margin-left: -8px;
-    margin-top: -17px;
+    margin-top: -5px;
 }
 
 .debug-notice {
